# star-wars

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml
src/: container.py  main.py  settings.py
src/cli/: clear_cache.py  container.py  do_work.py  main.py  sync_planets.py
src/domain/entity/: planet.py
src/domain/use_case/: get_planets.py  sync_planets.py
src/http/graphql/: app.py  planets_resolver.py
src/http/html/: app.py  index_view.py  planets_view.py  templates.py
src/http/html/templates/: base.html  index.html
src/repositories/: star_wars_api_planets_repository.py
src/repository/: star_wars_api_planets_repository.py
src/storage/: redis_cache.py
src/utils/: container.py
src/web/: container.py  main.py
src/web/graphql/: app.py  planets_resolver.py
src/web/html/: app.py  index_view.py  planets_view.py  templates.py
src/web/html/templates/: planets.html
tests/: test_asyncio_playground.py
tmp/: db_test.py  di_test.py  typechecking_test.py
