[tool.poetry]
name = "asyncio-playground"
version = "0.1.0"
description = ""
authors = ["Василий Субботин <vs@smena.space>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.0"
Jinja2 = "^3.0.2"
uvicorn = "^0.15.0"
aiohttp = "^3.7.4"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
